--- a/templates/profile.html
+++ b/templates/profile.html
@@ -204,22 +204,91 @@ $(document).ready(function() {
 
             <div class="gallery">
                 
-                {% for post in posts %}
-                <a href="{{post.get_absolute_url}}"><div class="gallery-item" tabindex="0">
-
-                    <img src="{{ post.picture.url }}" class="gallery-image" alt="" style="width: 500px; height: 300px; object-fit: cover;">
-
-                    <div class="gallery-item-info">
-
-                        <ul>
-                            <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden="true"></i> {{post.likes}}</li>
-                            <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden="true"></i> {{post.comment.count}}</li>
-                        </ul>
-
+{% for post in posts %}
+    <a href="{{ post.get_absolute_url }}">
+        <div class="gallery-item" tabindex="0">
+            {% if post.picture %}
+                <img src="{{ post.picture.url }}" class="gallery-image" alt="{{ post.caption|truncatechars:30 }}" style="width: 500px; height: 300px; object-fit: cover;">
+            {% elif post.video %}
+                <video class="gallery-video" style="width: 500px; height: 300px; object-fit: cover;" muted>
+                    <source src="{{ post.video.url }}" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <div class="video-overlay">
+                    <i class="fas fa-play-circle"></i>
+                </div>
+            {% else %}
+                <div class="text-quote-container" style="width: 500px; height: 300px; background: #f5f5f5; display: flex; align-items: center; justify-content: center;">
+                    <div class="text-quote-content" style="padding: 20px; text-align: center;">
+                        {% if post.text_quote %}
+                            <p style="font-style: italic; font-size: 1.2rem;">"{{ post.text_quote|truncatechars:100 }}"</p>
+                        {% endif %}
+                        {% if post.caption %}
+                            <p style="margin-top: 10px;">{{ post.caption|truncatechars:50 }}</p>
+                        {% endif %}
                     </div>
+                </div>
+            {% endif %}
 
-                </div></a>
-                {% endfor %}
+            <div class="gallery-item-info">
+                <ul>
+                    <li class="gallery-item-likes">
+                        <span class="visually-hidden">Likes:</span>
+                        <i class="fas fa-heart" aria-hidden="true"></i> {{ post.likes }}
+                    </li>
+                    <li class="gallery-item-comments">
+                        <span class="visually-hidden">Comments:</span>
+                        <i class="fas fa-comment" aria-hidden="true"></i> {{ post.comment.count }}
+                    </li>
+                    {% if post.link %}
+                        <li class="gallery-item-link">
+                            <i class="fas fa-link" aria-hidden="true"></i>
+                        </li>
+                    {% endif %}
+                    {% if post.location %}
+                        <li class="gallery-item-location">
+                            <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </a>
+{% endfor %}
+
+<style>
+    .gallery-video {
+        position: relative;
+        background: #000;
+    }
+    
+    .video-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-size: 3rem;
+        opacity: 0.8;
+    }
+    
+    .gallery-item:hover .video-overlay {
+        opacity: 1;
+    }
+    
+    .gallery-item-link, .gallery-item-location {
+        color: white;
+        font-size: 0.9rem;
+    }
+    
+    .text-quote-container {
+        background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    }
+</style>
 
                 
 
